--- a/static/index.html
+++ b/static/index.html
@@ -7,6 +7,8 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js'></script>
   </head>
   <body>
+    <!-- <canvas width="900" height="600">
+    </canvas> -->
     <script src="assets/sprite.js"></script>
     <script src="game.js"></script>
   </body>
